--- a/flask/templates/bid_detail.html
+++ b/flask/templates/bid_detail.html
@@ -95,6 +95,13 @@
 
                 <!-- Chat with the seller 버튼 -->
                 <button class="custom-btn" onclick="window.location.href='{{ url_for('create_chat_room', bid_id=bid.id) }}'">Chat with the seller</button>
+                <!-- 교환 완료 버튼 (메인 물건을 올린 사용자에게만 표시) -->
+                {% if session['user_id'] == item.user_id %}
+                <form action="{{ url_for('complete_exchange', bid_id=bid.id) }}" method="POST">
+                    <button type="submit" class="custom-btn">Complete Exchange</button>
+                </form>
+                {% endif %}
+
             </div>
         </div>
     </div>
