--- a/flask/templates/main.html
+++ b/flask/templates/main.html
@@ -137,7 +137,7 @@
                             <li><a href="#a">물품교환</a></li>
                             <li><a href="#a">내가 올린 물품</a></li>
                             <li><a href="{{ url_for('post_item') }}">물품 올리기</a></li>
-                            <li><a href="#a">이번주 급상승 물품</a></li>
+                            <li><a href="#a">이번주 급상승 물품s</a></li>
                         </ul>
                     </div>
                 </nav>
