--- a/flask/templates/signup.html
+++ b/flask/templates/signup.html
@@ -110,7 +110,7 @@
             <ul>
                 <li><a href="#">인스타그램</a></li>
                 <li><a href="#">카카오톡</a></li>
-                <li><a href="#">뮤직</a></li>
+                <li><a href="#">뮤직박스</a></li>
             </ul>
         </div>
         <span class="copy">&copy;2024 Facade BagguZangter</span>
