--- a/flask/templates/main.html
+++ b/flask/templates/main.html
@@ -63,7 +63,7 @@
             background-repeat: no-repeat; /* 반복 방지 */
             background-position: center; /* 이미지가 중앙에 위치하도록 설정 */
             opacity: 1;
-            pointer-events: none; /* 클릭 방지 */
+            pointer-events: none;
             transform: translate(10%, 10%); /* 이미지를 완전히 중앙에 맞추기 위해 조정 */
         }
 
