--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -43,7 +43,7 @@
         </div>
         <div class="contents">
             <div class="title">
-                <a href="/main">BagguZangter</a>
+                <a href="/main">BagguZangter-ON</a>
             </div>
             <main>
                 <div class="login-bg"></div>
