--- a/flask/static/css/BagguZangter.css
+++ b/flask/static/css/BagguZangter.css
@@ -7,9 +7,9 @@
     .contents {width: 450px;}
     .inner {width: 450px; height: 100vh;margin: 0 auto; }
     /* intro*/
-    .intro {width: 450px; height: 170vh; position: relative; background: #F2A03D; z-index: 999; }
-    .intro > h2 {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: #010326; font-size: 26px; opacity: 0;}
-    .intro > img {width: 40%; position: absolute; top: 40%; left: 50%; transform: translate(-50%, -40%); opacity: 0;}
+    .intro {width: 450px; height: 170vh; position: relative; background: #F2A03D; z-index: 999; display: none;}
+    .intro > h2 {position: absolute; top: 35%; left: 50%; transform: translate(-50%, -50%); color: #010326; font-size: 26px; font-weight: 700; opacity: 0;}
+    .intro .first-text img {width: 50%; position: absolute; top: 25%; left: 50%; transform: translate(-50%, -40%); opacity: 0;}
 
     /* btnBar */
     .btnBar {width: 450px; height: 90px; position: relative;}
@@ -82,12 +82,34 @@
     }
     .menu-list select option {color: #000;}
 
+    /* banner */
+      .swiper {
+        width: 450px;
+        height: 400px;
+      }
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after,
+      .swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {color: #222;}
+
     /* main */
     .contents {width: 450px; height:100vh; position: absolute; top: 0; }
     .contents .title  {text-align: left;width: 50%;  height: 50px; margin: 20px 0; font-size: 23px;}
     .contents .title a {display: block;}
     .contents video {width: 100%;}
-    .contents .box-Area { width: 100%; height: 100vh; margin: 30px 0;}
+    .contents .box-Area { width: 100%; /* height: 100vh; */ margin: 20% 0;}
     .contents .box {height: 85px; padding: 20px 10px 30px; margin: 20px; }
     .box {display: flex;align-items: center;margin-bottom: 20px;padding: 10px;border-bottom: 1px solid #ccc;}
     .box img {width: 150px;height: 150px; margin-right: 20px;object-fit: cover; border: 1px solid #ccc; border-radius: 10px;}
@@ -96,6 +118,130 @@
     .box .info p {margin: 0 0 10px 0; font-size: 1em; color: #666; font-weight: 700; }
     .box .info small {color: #666;} 
 
+    .box {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        position: relative;
+    }
+    .box img {
+        width: 150px;
+        height: 150px;
+        margin-right: 20px;
+        object-fit: cover;
+    }
+    .box .info {
+        display: flex;
+        flex-direction: column;
+    }
+    .box .info h3 {
+        margin: 0 0 10px 0;
+        font-size: 1.2em;
+    }
+    .box .info p {
+        margin: 0 0 10px 0;
+        font-size: 1em;
+    }
+    .box .info small {
+        color: #666;
+    }
+    .box .info .delete-btn {
+        margin-top: 10px;
+        padding: 5px 10px;
+        background: #e74c3c;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .filter-btn-container {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    .filter-btn-group {
+        display: flex;
+        gap: 10px;
+    }
+    .filter-btn {
+        padding: 8px 12px;
+        background-color: #222222;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .filter-btn:hover {
+        background-color: #0056b3;
+    }
+    .filter-btn.active {
+        background-color: #004085;
+    }
+
+    /* 검색 아이콘 스타일 */
+    .search-container {
+        display: flex;
+        flex-direction: row-reverse;
+        position: relative;
+    }
+    .search-input {
+        display: none;
+        padding: 5px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+    .search-btn {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        margin-left: 10px;
+    }
+
+    /* Floating Action Button 스타일 */
+    .fixed {width: 100%; position: relative;}
+    .write-button {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #F2A03D;
+        color: white;
+        font-size: 30px;
+        cursor: pointer;
+        z-index: 1000;
+        border: none;
+    }
+
+    
+
+    /* 팝업 메뉴 스타일 */
+    .popup-menu {
+        display: none;
+        position: fixed;
+        bottom: 70px;
+        right: 20px;
+        background-color: #444;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+        width: 150px;
+        padding: 10px 0;
+        z-index: 1000;
+    }
+    .popup-item {
+        padding: 10px 20px;
+        color: white;
+        cursor: pointer;
+    }
+    .popup-item:hover {
+        background-color: #555;
+    }
 
     /* login */
     .login {
@@ -139,9 +285,11 @@
     .fixed-banner > .fixfixed-chat {width: 100%;height: 80px; }
 
     /* footer */
-    footer {width: 100%; background: #fff; margin-top: 80px;}
+    footer {width: 100%; background: #fff; margin-top: 130vh;}
     footer > div {
         font-size: 13px; 
+        font-weight: 800;
+        color: #444;
         margin-bottom: 20px;
         line-height: 1.7;
         padding: 20px;
@@ -157,79 +305,79 @@
         margin-bottom: 30px;
     }
 
-    /* 회원가입창 */
-.mb-5 h1{text-align: center; font-size: 20px; font-weight: bold; margin: 30px 20px;}
-.ac {margin-bottom: 30px;  font-size: 14px;}
-.ac .ac-input {
-    padding: 10px; 
-    width: 380px;
-    background: none;
-    border: 1px solid #ccc;
-    outline: none;
-    
-}
-.ac .ac-phone {
-    padding: 10px; 
-    background: none;
-    border: 1px solid #ccc;
-    display: inline-block;
-    width: 105px;
-}
-.ac .h {display: inline;}
-select {
-    display: inline-block; 
-    width: 109px; 
-    height: 37px; 
-    background: none;
-    
-}
-.mb-3 {margin-bottom: 30px; margin-top: 30px;}
+/* 회원가입창 */
+    .mb-5 h1{text-align: center; font-size: 20px; font-weight: bold; margin: 30px 20px;}
+    .ac {margin-bottom: 30px;  font-size: 14px;}
+    .ac .ac-input {
+        padding: 10px; 
+        width: 380px;
+        background: none;
+        border: 1px solid #ccc;
+        outline: none;
+        
+    }
+    .ac .ac-phone {
+        padding: 10px; 
+        background: none;
+        border: 1px solid #ccc;
+        display: inline-block;
+        width: 105px;
+    }
+    .ac .h {display: inline;}
+    select {
+        display: inline-block; 
+        width: 109px; 
+        height: 37px; 
+        background: none;
+        
+    }
+    .mb-3 {margin-bottom: 30px; margin-top: 30px;}
 
-section > option {background: none;}
-.phone-n .ac-phone {background: none; border: 1px solid #ccc;}
-.phone-n {border: 1px solid #ccc;}
+    section > option {background: none;}
+    .phone-n .ac-phone {background: none; border: 1px solid #ccc;}
+    .phone-n {border: 1px solid #ccc;}
 
-/* 이용약관 */
-.check {display: flex;}
-input[type=checkbox] {
-    display:block;
-}
-input[type="checkbox"]+label {
-    display: block;
-    padding-left: 7px;
-    font-size: 14px;
-    cursor: pointer;
-    outline: none;
-    
-    
-}
-input[type='checkbox']:checked+label {
-    background:url('img/checkbox2.png') no-repeat 0 1px / contain;
-    outline: none;
-}
-label {margin-left: 3px;}
+    /* 이용약관 */
+    .check {display: flex;}
+    input[type=checkbox] {
+        display:block;
+    }
+    input[type="checkbox"]+label {
+        display: block;
+        padding-left: 7px;
+        font-size: 14px;
+        cursor: pointer;
+        outline: none;
+        
+        
+    }
+    input[type='checkbox']:checked+label {
+        background:url('img/checkbox2.png') no-repeat 0 1px / contain;
+        outline: none;
+    }
+    label {margin-left: 3px;}
 
-.ac-but {
-    width: 400px; 
-    margin-top: 30px;
-    padding: 10px 20px; 
-    background: #111; 
-    color: #fff; 
-    cursor: pointer;
-}
-.form-control{
-    padding: 10px; 
-    width: 380px;
-    background: none;
-    border: 1px solid #ccc;
-    outline: none;
-}
-.btn.btn-primary {
-    padding: 10px; 
-    width: 380px;
-    background: none;
-    border: 1px solid #000;
-    outline: none;
-    background: #fff;
-    color: #000;
-}
+    .ac-but {
+        width: 400px; 
+        margin-top: 30px;
+        padding: 10px 20px; 
+        background: #111; 
+        color: #fff; 
+        cursor: pointer;
+    }
+    .form-control{
+        padding: 10px; 
+        width: 380px;
+        background: none;
+        border: 1px solid #ccc;
+        outline: none;
+    }
+    .btn.btn-primary {
+        padding: 10px; 
+        width: 380px;
+        background: none;
+        border: 1px solid #000;
+        outline: none;
+        background: #fff;
+        color: #000;
+    }
