--- a/flask/templates/bid_item.html
+++ b/flask/templates/bid_item.html
@@ -31,23 +31,24 @@
         .post-item-form input[type="text"],
         .post-item-form textarea,
         .post-item-form input[type="file"] {
-            width: 100%;
+            width: 99%;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         .post-item-form button {
             display: block;
-            width: 450px;
+            width: 100%;
             padding: 10px;
             background: #F2A03D;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: all 0.4s;
         }
         .post-item-form button:hover {
-            background: #45a049;
+            background: #9c7340;
         }
         .preview {
             margin-top: 20px;
@@ -68,33 +69,37 @@
                 <div class="menu-list">
                     <ul class="top-menu clear">
                         <li><a href="#a">Search</a></li>
-                        <li><a href="{{ url_for('login') }}">Login</a></li>
-                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        {% if 'user_id' in session %}
+                            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('login') }}">Login</a></li>
+                        {% endif %}
                         <li><a href="#a">Wish</a></li>
                         <li><a href="#a">Cart</a></li>
                     </ul>
-
+                    <h3 style="text-align: center;">Welcome, {{ username }}!</h3>
                     <ul class="categorie">
                         <li><a href="#a">물품교환</a></li>
                         <li><a href="#a">내가 올린 물품</a></li>
                         <li><a href="{{ url_for('post_item') }}">물품 올리기</a></li>
-                        <li><a href="#a">이번주 급상승 물품</a></li>
+                        <li><a href="{{ url_for('my_transactions')}}">나의 거래 내역</a></li>
                     </ul>
                 </div>
             </nav>
-            <!-- btnBar -->
-            <a href="#" class="btn-menu">
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-            </a>
+            <div class="btnBar">
+                <a href="#" class="btn-menu">
+                    <span class="item"></span>
+                    <span class="item"></span>
+                    <span class="item"></span>
+                </a>
+             </div>
         </div>
         <div class="contents">
             <div class="title">
                 <a href="/main">BagguZangter</a>
             </div>
             <div class="post-item-form">
-                <h1>Bid on this item</h1>
+                <h1>교환 아이템 업로드</h1>
                 <form action="{{ url_for('bid_item', item_id=item_id) }}" method="post" enctype="multipart/form-data">
                     <div>
                         <label for="title">Title:</label>
@@ -112,7 +117,7 @@
                         <img id="preview" src="#" alt="Image Preview" style="display: none;">
                     </div>
                     <div>
-                        <button type="submit">Bid</button>
+                        <button type="submit">UP Load</button>
                     </div>
                 </form>
             </div>
@@ -142,6 +147,7 @@
         <span class="copy">&copy;2024 Facade BagguZangter</span>
     </footer>
     <!-- //footer -->
+    <script src="{{ url_for('static', filename='js/BagguZangter.js') }}"></script>
     <script>
         function previewImage(event) {
             var reader = new FileReader();
@@ -153,6 +159,6 @@
             reader.readAsDataURL(event.target.files[0]);
         }
     </script>
-    <script src="{{ url_for('static', filename='js/BagguZangter.js') }}"></script>
+    
 </body>
 </html>
