--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -28,8 +28,9 @@
                     <ul class="categorie">
                         <li><a href="#a">물품교환</a></li>
                             <li><a href="#a">내가 올린 물품</a></li>
-
                             <li><a href="#a">이번주 급상승 물품</a></li>
+                            <li><a href="{{ url_for('post_item') }}">물품 올리기</a></li>
+                            <li><a href="{{ url_for('my_transactions')}}">나의 거래 내역</a></li>
                     </ul>
                 </div>
             </nav>
@@ -43,7 +44,7 @@
         </div>
         <div class="contents">
             <div class="title">
-                <a href="/main">BagguZangter-ON</a>
+                <a href="/main">BagguZangter</a>
             </div>
             <main>
                 <div class="login-bg"></div>
