--- a/flask/templates/post_item.html
+++ b/flask/templates/post_item.html
@@ -32,14 +32,14 @@
         .post-item-form input[type="text"],
         .post-item-form textarea,
         .post-item-form input[type="file"] {
-            width: 100%;
+            width: 99%;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         .post-item-form button {
             display: block;
-            width: 450px;
+            width: 100%;
             padding: 10px;
             background: #F2A03D;
             color: white;
@@ -69,21 +69,23 @@
                 <div class="menu-list">
                     <ul class="top-menu clear">
                         <li><a href="#a">Search</a></li>
-                        <li><a href="{{ url_for('login') }}">Login</a></li>
-                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        {% if 'user_id' in session %}
+                            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('login') }}">Login</a></li>
+                        {% endif %}
                         <li><a href="#a">Wish</a></li>
                         <li><a href="#a">Cart</a></li>
                     </ul>
-
+                    <h3 style="text-align: center;">Welcome, {{ username }}!</h3>
                     <ul class="categorie">
                         <li><a href="#a">물품교환</a></li>
                         <li><a href="#a">내가 올린 물품</a></li>
                         <li><a href="{{ url_for('post_item') }}">물품 올리기</a></li>
-                        <li><a href="#a">이번주 급상승 물품</a></li>
+                        <li><a href="{{ url_for('my_transactions')}}">나의 거래 내역</a></li>
                     </ul>
                 </div>
             </nav>
-            <!-- btnBar -->
             <div class="btnBar">
                 <a href="#" class="btn-menu">
                     <span class="item"></span>
@@ -101,11 +103,11 @@
                 <form action="{{ url_for('post_item') }}" method="post" enctype="multipart/form-data">
                     <div>
                         <label for="title">제목:</label>
-                        <input type="text" id="title" name="title" required>
+                        <input type="text" id="title" name="title" required placeholder="정확한 제품명을 입력해주세요.">
                     </div>
                     <div>
                         <label for="description">자세한 설명:</label>
-                        <textarea id="description" name="description" required></textarea>
+                        <textarea id="description" name="description" required placeholder="구입시기 : &#10;제품명 :&#10;사용한 기간 : &#10;상태 여부 : &#10; &#10;상세하게 입력 바랍니다."></textarea>
                     </div>
                     <div>
                         <label for="image">Image:</label>
