--- a/flask/templates/main.html
+++ b/flask/templates/main.html
@@ -39,7 +39,7 @@
                 <p class="first-text">
                     <img src="../static/img/intro.png" alt="intro_bg">
                 </p>
-                <h2 class="second-text">BagguZangter</h2>
+                <h2 class="second-text">BagguZangter-ON</h2>
             </div>
     <!-- header -->
             <div class="inner">
