--- a/flask/templates/main.html
+++ b/flask/templates/main.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="/static/js/jquery-3.7.0.min.js"></script>
     <script src="/static/js/jquery-ui.min.js"></script>
-    <title>BagguZangter</title>
+    <title>BagguZangter-ON</title>
     <style>
 
     /* 거래 완료 이미지 스타일 */
@@ -39,7 +39,7 @@
                 <p class="first-text">
                     <img src="../static/img/intro.png" alt="intro_bg">
                 </p>
-                <h2 class="second-text">BagguZangter-ON</h2>
+                <h2 class="second-text">BagguZangter</h2>
             </div>
     <!-- header -->
             <div class="inner">
